# ChangeLog for sys-apps/attr
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.117 2009/03/14 12:31:23 vapier Exp $

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> attr-2.4.43.ebuild:
  Stable for HPPA (bug #259431).

  02 Mar 2009; Raúl Porcel <armin76@gentoo.org> attr-2.4.43.ebuild:
  arm/ia64/s390/sh/x86 stable wrt #259431

  25 Feb 2009; Joseph Jezak <josejx@gentoo.org> attr-2.4.43.ebuild:
  Marked ppc stable for bug #259431.

  24 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org> attr-2.4.43.ebuild:
  stable amd64, bug 259431

  22 Feb 2009; Tobias Klausmann <klausman@gentoo.org> attr-2.4.43.ebuild:
  Stable on alpha, bug #259431

  19 Feb 2009; Tom Gall <tgall@gentoo.org> attr-2.4.43.ebuild:
  stable on ppc64, bug #259431

  18 Feb 2009; Ferris McCormick <fmccor@gentoo.org> attr-2.4.43.ebuild:
  Sparc stable, Bug #259431 (been around 6 months now).

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> attr-2.4.41.ebuild:
  Stable for HPPA (bug #235014).

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> attr-2.4.41.ebuild:
  ia64 stable wrt #235014

  24 Aug 2008; Tobias Klausmann <klausman@gentoo.org> attr-2.4.41.ebuild:
  Stable on alpha, bug #235014

  19 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> attr-2.4.41.ebuild:
  Stable on sparc, bug #235014

  18 Aug 2008; Brent Baude <ranger@gentoo.org> attr-2.4.41.ebuild:
  stable ppc64, bug 235014

  18 Aug 2008; Brent Baude <ranger@gentoo.org> attr-2.4.41.ebuild:
  stable ppc, bug 235014

  17 Aug 2008; Markus Meier <maekke@gentoo.org> attr-2.4.41.ebuild:
  amd64/x86 stable, bug #235014

*attr-2.4.43 (17 Aug 2008)

  17 Aug 2008; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.43-linguas.patch, +attr-2.4.43.ebuild:
  Version bump #231274 by Conrad Kostecki.

*attr-2.4.41 (23 Feb 2008)

  23 Feb 2008; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.39-linguas.patch, attr-2.4.39.ebuild, +attr-2.4.41.ebuild: