@@ -4,9 +4,9 @@ AUX attr-2.4.39-linguas.patch 243 RMD160 9297f41c86f2555c52a0d8d15ed611c56bd584b
 AUX attr-2.4.41-features_h.patch 406 RMD160 c691d9d24b370ed4359c7a7fc4cc01a367f36122 SHA1 3ae4eae123ac81e0ee88c66225e2cfca728048e3 SHA256 7b26ffdfcb63d444a98979e6779b96f6f3d9ce0d5de12c69925f5ed888da9158
 AUX attr-2.4.41-no-static-paths.patch 2636 RMD160 673a2343d95b6980aaaaa36923f0d9d770516147 SHA1 d09ec8eeb1741fc5cc9aac2884ef44c5841b8532 SHA256 16d3bdeb7fb604a913390dd87d5f6f7b38fbd37b914548eb5e29e696d7204858
 AUX attr-2.4.43-linguas.patch 249 RMD160 93920b4d51a1d8033b1d89d5db11729c1ae4b14f SHA1 49a8465de5e968fff9f14ed5d72d32acd2e98746 SHA256 5012fe8ebce0a23de74ad0803476ebcf7d492e11295596ae164da6baad3323e9
-DIST attr_2.4.41-1.tar.gz 114120 RMD160 4cd1e48a329617d6913908d5cf6943385ef38c4b SHA1 868d1629ebe034c381ca221cdb5f45f71b1bf392 SHA256 f799cf17f9722ed3f9cc5b90a090f64ba4da7421e971a3981280e48d9e418235
+DIST attr-2.4.44.src.tar.gz 316328 RMD160 f449496821bb6885f93e296b5c82b4812dde109e SHA1 99292199dfb212308162cde7638e8454881e2b76 SHA256 9f6214b8e53f4bba651ac5a72c0f6193b12aa21fbf1d675d89a7b4bc45264498
 DIST attr_2.4.43-1.tar.gz 116991 RMD160 23afbe0fe7104b2fdf4dc62a741263634e405b96 SHA1 9ec8edacecaa37423dba042ba16fdb045a8ba002 SHA256 d358b233b3e2ad235e63fd8697e337006fc7506844e424b0d9dd7a24affec5bf
-EBUILD attr-2.4.41.ebuild 2098 RMD160 0742fc0a36b6a764c6e4f2691b12b80cc899e1a4 SHA1 b87c7b3fc98a64b9812940825096728b5f5a8a4e SHA256 63608e4ce00f128fcba59b40de9ddd6778f21900550595fa4a26e4c0065f765b
 EBUILD attr-2.4.43.ebuild 2104 RMD160 7e36840c5cba0bd11d78db796e808b1ca83e2a6e SHA1 cd6d2fc70e0dd18b62b573467c85f70e9fd5e283 SHA256 24b3cad3cd03697e98b3ae56c6af633cc205791a88660adbe81a9a55726ab1ab
-MISC ChangeLog 14709 RMD160 67306624e93ef094ac84ade649b7eb45444f1fe0 SHA1 277b68bb5c8dceeb293cfc3a7f1c3feac1dc5749 SHA256 bdbeb397012de2eefeb92a700207455dd0601b3e958f3228c58af4ed0ae18d31
+EBUILD attr-2.4.44.ebuild 1618 RMD160 c1046dbe4a86da0bca1a33b8d9f39d78f35a6626 SHA1 af13f87213269d92f508db059b1b0f62f73afeb6 SHA256 9e078f7c82bb2abdf778f3764e52bbadf31e0ad3fb4706182df9dbd88b40f485
+MISC ChangeLog 14938 RMD160 a15a4056f60e9cef01233c94a3ac6da2714c1d35 SHA1 aa3f51f2633224cabb4dd6d0d6e76cef139c5c8d SHA256 191f6e4e0944bf82729636ae068b0f405c1817d48f309d4e1b9296a34761382a
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
