@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/attr
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.117 2009/03/14 12:31:23 vapier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.118 2010/06/08 21:43:04 vapier Exp $
+
+*attr-2.4.44 (08 Jun 2010)
+
+  08 Jun 2010; Mike Frysinger <vapier@gentoo.org> +attr-2.4.44.ebuild,
+  +files/attr-2.4.44-gettext.patch, +files/attr-2.4.44-headers.patch:
+  Version bump #292840 by Mr. Anderson and Michał Górny.
 
   06 Mar 2009; Jeroen Roovers <jer@gentoo.org> attr-2.4.43.ebuild:
   Stable for HPPA (bug #259431).
